--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -20,6 +20,7 @@
     border-radius: 3px;
     border: solid 1px #ccc;
     background: white;
+    margin-left: auto !important;
   }
 
   &.ant-tabs-card > .ant-tabs-bar .ant-tabs-tab{
