--- a/client/src/styles/variables.less
+++ b/client/src/styles/variables.less
@@ -1,11 +1,11 @@
 
-@main-color:#0089d1;
+@main-color:#4176e7;
 
 @back-color:#f8f8f8;
 
 @window-bar:#E8960C;
 
-@btn-submit-color:@main-color;
+@btn-submit-color:#039cfd;
 
 @btn-cancel-color:white;
 
