--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -9,17 +9,16 @@
     height: 30px;
     background: white;
     box-shadow:0 1px 3px #ccc;
+    z-index: 999;
   }
 
   &>.ant-tabs-content{
     position: absolute;
     left: 10px;
-    right: 10px;
-    top:42px;
     bottom: 10px;
-    border-radius: 3px;
-    border: solid 1px #ccc;
-    background: white;
+    top:40px;
+    right:10px;
+    background: #f4f4f4;
     margin-left: auto !important;
   }
 
@@ -40,7 +39,30 @@
   }
 }
 
-
+.ant-input-lg{
+  padding-top: 2px;
+  padding-bottom: 2px;
+  height: 28px;
+}
 .ant-tabs-bar{
   margin-bottom: 0;
+}
+
+.ant-form-item-label>label{
+  height: 28px;
+  color: #666;
+}
+.ant-select-lg .ant-select-selection--single{
+  height: 28px;
+}
+.ant-select-selection{
+  min-width: 120px;
+}
+
+.ant-btn-lg{
+  height: 28px;
+}
+
+.ant-btn-primary{
+  background: @btn-submit-color;
 }
