--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -194,16 +194,19 @@ input, select, button {
   font-size: 11px;
 }
 
-
+.my-col-full{
+  width: 100%;
+  height: 100%;
+  border: solid 1px #ccc;
+  border-radius: 3px;
+  background: white;
+}
 
 .my-tb{
-  padding: 12px 40px 12px 10px;
+  padding: 0 40px 0 20px;
+  height: 54px;
   border-bottom: solid 1px #ccc;
   .flex-vm;
   .flex-between-row;
 }
 
-
-
-
-//
