--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -209,4 +209,12 @@ input, select, button {
   .flex-vm;
   .flex-between-row;
 }
-
+.my-tb-right button{
+  color: #373a3c;
+  border-color: #ccc;
+  font-family: '微软雅黑', '宋体', Arial, Helvetica, Verdana, 'sans-serif';
+;
+}
+.my-tb-right>button:first-child{
+  margin-right: 5px;
+}
