--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -4,6 +4,15 @@
 //@import "~antd/dist/antd.less";
 
 
+::-webkit-scrollbar{width: 7px; height: 7px;}
+::-webkit-scrollbar-track{/*border-radius: 10px;*/ -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);}
+::-webkit-scrollbar-track:hover{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); background-color: rgba(0,0,0,0.01);}
+::-webkit-scrollbar-track:active{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); background-color: rgba(0,0,0,0.05);}
+::-webkit-scrollbar-thumb{background-color: rgba(0,0,0,0.05); /*border-radius: 10px;*/ -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,.1);}
+::-webkit-scrollbar-thumb{background-color: rgba(0,0,0,0.2); /*border-radius: 10px;*/ -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,.1);}
+::-webkit-scrollbar-thumb:hover{background-color: rgba(0,0,0,0.4); -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,.1);}
+::-webkit-scrollbar-thumb:active{background-color: rgba(0,0,0,0.4);}
+
 body {
   margin: 0;
   padding: 0;
@@ -217,4 +226,13 @@ input, select, button {
 }
 .my-tb-right>button:first-child{
   margin-right: 5px;
+}
+
+.my-grid-table{
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: red;
 }
