--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -69,3 +69,8 @@
 .ant-btn-primary{
   background: @btn-submit-color;
 }
+.ant-input:focus,.ant-select-focused .ant-select-selection{
+  border-color: #49a9ee;
+  outline: 0;
+  box-shadow: none;
+}
