--- a/client/src/styles/jqGrid-config.less
+++ b/client/src/styles/jqGrid-config.less
@@ -16,9 +16,11 @@ tr.active > td {
 
 tr.success>td{
   background-color: #3498DB!important;
-  color: #fff;
+  color: #fff!important;
 }
-
+.jqgrid-rownum{
+  background: white!important;
+}
 tr.jqgrow{
   height: 27px;
 }
