--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -12,6 +12,17 @@
 ::-webkit-scrollbar-thumb:hover{background-color: rgba(0,0,0,0.4); -webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,.1);}
 ::-webkit-scrollbar-thumb:active{background-color: rgba(0,0,0,0.4);}
 
+input::-webkit-input-placeholder { /* WebKit browsers */
+  color:#444;
+}
+input::-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  color:#444;
+}
+input::-moz-placeholder { /* Mozilla Firefox 19+ */
+  color:#444;
+}
+
+
 body {
   margin: 0;
   padding: 0;
