完成部分modal样式

--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -44,6 +44,8 @@
   padding-bottom: 2px;
   width: 140px;
   height: 28px;
+  letter-spacing: normal;
+  color: #000;
 }
 .ant-tabs-bar{
   margin-bottom: 0;
@@ -55,9 +57,15 @@
 }
 .ant-select-lg .ant-select-selection--single{
   height: 28px;
+
+}
+.ant-select-lg .ant-select-selection__rendered{
+  line-height: 28px!important;
 }
 .ant-select-selection{
-  min-width: 120px;
+  min-width: 140px;
+  letter-spacing: normal;
+  color: #000;
 }
 
 .ant-btn-lg{
