--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -82,3 +82,29 @@
   outline: 0;
   box-shadow: none;
 }
+
+.vertical-center-modal{
+  .flex-hvm;
+}
+
+.vertical-center-modal .ant-modal{
+  top:0;
+
+  .ant-modal-close{
+    top:-6px;
+  }
+  .ant-modal-close,.ant-modal-close-x{
+    height: 35px;
+  }
+  .ant-modal-header{
+    background: rgb(248,248,248);
+    height: 35px;
+    padding-top: 6px;
+
+  }
+  .ant-modal-footer {
+    background: rgb(248,248,248);
+    height: 40px;
+    padding-top: 6px;
+  }
+}
