--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -84,7 +84,9 @@
 }
 
 .vertical-center-modal{
-  .flex-hvm;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .vertical-center-modal .ant-modal{
