--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -91,6 +91,8 @@
 
 .vertical-center-modal .ant-modal{
   top:0;
+  width: auto!important;
+  min-width:240px;
 
   .ant-modal-close{
     top:-6px;
