修复多个Grid无法共存问题

--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -112,3 +112,7 @@
     padding-top: 6px;
   }
 }
+
+.ant-tabs:not(.ant-tabs-vertical) > .ant-tabs-content > .ant-tabs-tabpane-inactive{
+  width: 0px;
+}
