--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -290,3 +290,9 @@ input, select, button {
   min-width: 800px;
   height: 600px;
 }
+
+.my-form-square{
+  input,select,textarea{
+    border-radius: 0!important;
+  }
+}
