--- a/client/src/styles/jqGrid-config.less
+++ b/client/src/styles/jqGrid-config.less
@@ -56,3 +56,7 @@ tr.jqgrow>td:first-child,tr.jqgrow>td:last-child{
   font-weight: normal;
   letter-spacing:normal;
 }
+.tree-minus,.tree-plus,.tree-leaf{
+  margin-top: 5px;
+
+}
