--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -50,6 +50,10 @@
   margin-bottom: 0;
 }
 
+.ant-btn{
+  font-weight: 600;
+  font-size: 12px;
+}
 .ant-form-item-label>label{
   height: 28px;
   color: #666;
