增加行编辑

--- a/client/src/styles/jqGrid-config.less
+++ b/client/src/styles/jqGrid-config.less
@@ -38,14 +38,14 @@ tr.jqgrow>td{
 
 tr.jqgrow>td{
   color:#000;
-  border-right: none!important;
+  border-right: dashed 1px @border-color!important ;
   border-bottom-style: dashed!important;
   letter-spacing:normal;
   font-size: 12px!important;
 }
 
 tr.jqgrow>td:first-child,tr.jqgrow>td:last-child{
-  border-right: solid 1px @border-color!important;
+  border-right: dashed 1px @border-color!important;
 }
 
 .ui-jqgrid .ui-jqgrid-htable th{
@@ -96,4 +96,12 @@ tr.jqgrow>td:first-child,tr.jqgrow>td:last-child{
 
 .ui-jqgrid-pager{
   border-top:solid 1px @border-color!important;
+}
+
+.ui-jqgrid input.inline-edit-cell{
+  height: 26px;
+  border-radius: 0;
+  padding: 1px 4px;
+  font-size: 12px;
+  color: #000;
 }
