修改行编辑

--- a/client/src/styles/jqGrid-config.less
+++ b/client/src/styles/jqGrid-config.less
@@ -64,7 +64,13 @@ tr.jqgrow>td:first-child,tr.jqgrow>td:last-child{
 
 .ui-row-ltr{
 
-  .glyphicon-cog:before,.glyphicon-triangle-right:before,.glyphicon-triangle-bottom:before {
+  .glyphicon-cog:before{
+    color: lighten(#039cfd,30%);
+    font-size: 0.6em!important;
+    font-weight: lighter!important;
+  }
+
+  .glyphicon-triangle-right:before,.glyphicon-triangle-bottom:before {
     color: #039cfd;
     font-size: 0.6em!important;
     font-weight: lighter!important;
