--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -80,6 +80,13 @@ input, select, button {
   .flex-vm;
 }
 
+
+.flex-vs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .full-screen{
   position: absolute;
   top:0;
