增强行编辑

--- a/client/src/styles/jqGrid-config.less
+++ b/client/src/styles/jqGrid-config.less
@@ -111,3 +111,9 @@ tr.jqgrow>td:first-child,tr.jqgrow>td:last-child{
   font-size: 12px;
   color: #000;
 }
+
+.ui-jqgrid .ui-jqgrid-view select{
+  font-size: 12px;
+  cursor: pointer;
+  border-radius: 0;
+}
