--- a/client/src/styles/variables.less
+++ b/client/src/styles/variables.less
@@ -1,19 +1,16 @@
 
-@main-color:#4176e7;
+@main-color:#039cfd;
 
 @back-color:#f8f8f8;
 
 @window-bar:#E8960C;
 
-@btn-submit-color:#039cfd;
+@btn-submit-color:@main-color;
 
 @btn-cancel-color:white;
 
-
 @notice-height:20px;
-@header-height:64px;
+@header-height:46px;
 @left-width:240px;
-
-@footer-height:24px;
 
 @border-color:rgb(221, 221, 221);
