--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -190,6 +190,32 @@ input, select, button {
   }
 }
 
+.ant-layout-header{
+  .logo{
+    width: 240px;
+    height: 100%;
+    float: left;
+    .flex-hvm;
+    h4{
+      color: white;
+    }
+  }
+  .ant-menu{
+    background: inherit;
+    .ant-menu-item{
+      i{
+        margin-right: 3px;
+      }
+      color: rgb(208, 234, 233);
+      padding-left: 10px;
+      padding-right: 10px;
+      font-size: 12px;
+    }
+    .ant-menu-item-selected,.ant-menu-item:hover{
+      color: white;
+    }
+  }
+}
 
 
 .my-col-full{
