--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -119,3 +119,22 @@
     padding-top: 6px;
   }
 }
+
+.ant-dropdown-menu{
+  padding: 5px;
+  background:#f8f8f8;
+  border: solid 1px @border-color;
+
+  .ant-dropdown-menu-item{
+    padding:5px 50px 5px 20px;
+    color: #333;
+
+    &:hover{
+      background: #eeeeee;
+    }
+
+    i{
+      margin-right: 10px;
+    }
+  }
+}
