--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -109,13 +109,20 @@ input, select, button {
   background: url(../images/login-bg.jpg) center center no-repeat;
 }
 
+.ant-form-item:last-child{
+  margin-bottom: 5px;
+}
 .login-form{
-  max-width: 340px;
-  background: rgba(222,222,2222,22);
-  padding: 20px;
+  width:  360px;
+  min-height: 300px;
+  background: rgba(250,250,250,0.95);
+  padding: 30px 70px;
   border-radius: 5px;
-  opacity:0.8;
 
+  .login-varify{
+    cursor: pointer;
+    vertical-align:top;
+  }
   &:hover{
     opacity: 0.95;
   }
@@ -126,10 +133,13 @@ input, select, button {
    .login-form-button {
     width: 100%;
   }
+
+  input,img{
+    height: 32px;
+  }
 }
 
 .ant-layout-header{
-
   .my-logo{
     width: 240px;
     height: 100%;
@@ -161,10 +171,7 @@ input, select, button {
         border: solid 3px white;
         margin-right: 5px;
       }
-
-
     }
-
   }
   .ant-menu{
     background: none;
