--- a/client/src/styles/antd-config.less
+++ b/client/src/styles/antd-config.less
@@ -1,3 +1,5 @@
+@import "variables";
+
 .ant-layout-header {
   height: @header-height;
   background-image: -webkit-linear-gradient(left bottom, rgb(65, 118, 231), rgb(46, 153, 212));
