--- a/client/src/styles/jqGrid-config.less
+++ b/client/src/styles/jqGrid-config.less
@@ -1,7 +1,8 @@
+@import "variables";
 
 .ui-jqgrid,.ui-jqgrid-view,.ui-jqgrid-bdiv{
   border: 0;
-  .flex;
+  display: flex!important;
   flex-direction: column;
   flex: 1;
   width: auto!important;
@@ -97,7 +98,8 @@ tr.jqgrow>td:first-child,tr.jqgrow>td:last-child{
 }
 .ui-userdata-top{
   background: rgb(248, 248, 248);
-  .flex-vm;
+  display: flex!important;
+  align-items: center!important;
 
   .ant-btn-group{
     margin-right: 10px;
