--- a/client/src/styles/jqGrid-config.less
+++ b/client/src/styles/jqGrid-config.less
@@ -6,6 +6,7 @@
   flex-direction: column;
   flex: 1;
   width: auto!important;
+  overflow-x: auto;
 }
 
 .ui-userdata,.ui-jqgrid-hdiv,.ui-jqgrid-pager{
