增加个人信息修改

--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -288,3 +288,38 @@ input, select, button {
 .ant-modal-body .my-grid-wrapper{
   border: solid 1px @border-color;
 }
+
+.my-user-info .ant-form-item{
+  border-bottom:1px dotted #dddddd;
+  padding: 2px 10px;
+  margin-bottom: 12px;
+  .ant-form-item-label{
+    width: 100px;
+  }
+  .ant-form-item-control-wrapper{
+    width: 240px;
+
+    textarea{
+      height: 80px;
+    }
+  }
+
+  .avatar-uploader,
+  .avatar-uploader-trigger,
+  .avatar {
+    width: 100px;
+    height: 100px;
+  }
+  .avatar-uploader {
+    display: block;
+    border: 1px dashed #d9d9d9;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  .avatar-uploader-trigger {
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 28px;
+    color: #999;
+  }
+}
