--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -304,22 +304,8 @@ input, select, button {
     }
   }
 
-  .avatar-uploader,
-  .avatar-uploader-trigger,
-  .avatar {
+  .my-user-photo {
     width: 100px;
     height: 100px;
-  }
-  .avatar-uploader {
-    display: block;
-    border: 1px dashed #d9d9d9;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  .avatar-uploader-trigger {
-    display: table-cell;
-    vertical-align: middle;
-    font-size: 28px;
-    color: #999;
   }
 }
