--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -313,3 +313,53 @@ input, select, button {
     margin-left: 5px;
   }
 }
+
+.my-mobile-modal{
+  .ant-modal-header{
+    padding: 0 5px 0 10px!important;
+    .flex-vm;
+  }
+  .ant-modal-title{
+    .flex-vm;
+    width: 100%;
+  }
+  .my-modal-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+    button {
+      margin-right: 2px;
+      border: 0;
+      padding-left: 4px!important;
+      padding-right: 4px!important;
+      background-color: rgb(248, 248, 248);
+
+      i:before{
+        font-size: 1.2em;
+        font-family: '微软雅黑', serif;
+      }
+    }
+  }
+
+  .my-full-screen{
+    position: absolute;
+    left: 0!important;
+    top: 0!important;
+    right: 0!important;
+    bottom: 0!important;
+    padding-bottom: 0!important;
+
+    .ant-modal-content{
+      height: 100%!important;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .ant-modal-body{
+        flex: 1;
+      }
+    }
+  }
+}
