修改自定义modal名称

--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -345,10 +345,10 @@ input, select, button {
 
   .my-full-screen{
     position: absolute;
-    left: 0!important;
-    top: 0!important;
-    right: 0!important;
-    bottom: 0!important;
+    left: 10px!important;
+    top: 10px!important;
+    right: 10px!important;
+    bottom: 10px!important;
     padding-bottom: 0!important;
 
     .ant-modal-content{
