增加公告查看

--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -460,3 +460,39 @@ input, select, button {
     }
   }
 }
+
+.my-notify-read-wrapper{
+   padding: 10px;
+   justify-content: flex-start;
+
+  hr{
+    margin: 3px 0;
+    border-top:solid 1px #ccc;
+  }
+  .topic_full_title{
+    font-size: 22px;
+    font-weight: 700;
+    margin: 8px 0;
+    display: inline-block;
+    vertical-align: bottom;
+    width: 75%;
+    line-height: 130%;
+  }
+  .put-top{
+    background: #80bd01;
+    padding: 2px 4px;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 12px;
+    margin-right: 5px;
+  }
+
+  .change{
+    span:before {
+      content: "•";
+    }
+  }
+  .content{
+    padding:10px;
+  }
+}
