--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -3,7 +3,7 @@
 @import "antd-config";
 @import "jqGrid-config";
 
-::-webkit-scrollbar{width: 7px; height: 7px;}
+::-webkit-scrollbar{width: 3px; height: 3px;}
 ::-webkit-scrollbar-track{/*border-radius: 10px;*/ -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);}
 ::-webkit-scrollbar-track:hover{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); background-color: rgba(0,0,0,0.01);}
 ::-webkit-scrollbar-track:active{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); background-color: rgba(0,0,0,0.05);}
@@ -205,14 +205,18 @@ input, select, button {
 
 
 .my-col-full{
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  left: 10px;
+  top:40px;
+  right: 10px;
+  bottom: 10px;
   border: solid 1px #ccc;
   border-radius: 3px;
   background: white;
   .flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow:auto;
 }
 
 .my-tb{
@@ -506,7 +510,5 @@ input, select, button {
 
   .content{
     padding:10px;
-    flex: 1;
-    overflow: scroll;
   }
 }
