--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -3,7 +3,7 @@
 @import "antd-config";
 @import "jqGrid-config";
 
-::-webkit-scrollbar{width: 3px; height: 3px;}
+::-webkit-scrollbar{width: 5px; height: 5px;}
 ::-webkit-scrollbar-track{/*border-radius: 10px;*/ -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);}
 ::-webkit-scrollbar-track:hover{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); background-color: rgba(0,0,0,0.01);}
 ::-webkit-scrollbar-track:active{-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4); background-color: rgba(0,0,0,0.05);}
@@ -510,5 +510,12 @@ input, select, button {
 
   .content{
     padding:10px;
+  }
+}
+
+#my-editor{
+  .w-e-text{
+    width: 800px!important;
+    overflow-x: scroll!important;
   }
 }
